--- a/説明書リスト.md
+++ b/説明書リスト.md
@@ -32,7 +32,7 @@
 |iRobot|ロボット掃除機|Roomba692|大|
 |JAPANNEXT|4Kモニター|JN-IPS2704UHDR|大|
 |JZN|USBTypeCとHDMIの変換器||小|
-|Kensington|トラックボールマウス|中|
+|Kensington|トラックボールマウス||中|
 |KENWOOD|コンポ|UD-A77|大|
 |Lenovo|デスクトップPC|IdeaCentre|中|
 |Lenovo|ノートPC|LegionY520|大|
