--- a/説明書リスト.md
+++ b/説明書リスト.md
@@ -39,6 +39,8 @@
 |Lepow|モバイルモニター||中|
 |Logicool|Webカメラ|HD Webcam C270|中|
 |mifa|PCスピーカー||中|
+|NEC|ルーター|Aterm WG2600HS2|大|
+|neruco|ベッド|IKB-002|大|
 |NTT|ONU||中|
 |OMRON|体温計|MC-681|中|
 |OWLTECH|有線キーボード|KB109C|大|
